--- a/css/home.css
+++ b/css/home.css
@@ -5,6 +5,7 @@
 body {
     background: rgb(63, 203, 251);
     background: linear-gradient(90deg, rgba(63, 203, 251, 1) 0%, rgba(43, 100, 115, 1) 0%, rgba(0, 121, 255, 1) 100%);
+    min-width: 1080px;
 }
 
 h1 {
@@ -54,3 +55,5 @@ h3 {
     padding-left: 5%;
     padding-right: 5%;
 }
+
+
