--- a/css/barraNavegacao.css
+++ b/css/barraNavegacao.css
@@ -8,46 +8,31 @@
 }
 
 .nav-list {
-    width: 45%;
+    padding-top: 1%;
+    display: flex;
+    justify-content: space-between;
+    padding-left: 5%;
+    padding-right: 5%;
     display: flex;
     font-size: 25px;
+    align-items: left;
     font-family: 'Times New Roman', Times, serif;
 }
 
-.nav-list li {
+.link{
     list-style: none;
     padding: 10px 30px;
-}
-
-.nav-list li a {
     text-decoration: none;
     color: white;
 }
 
-.nav-list li a:hover {
+.link:hover{
     color: black;
-}
-
-.rightNav {
-    width: 10%;
-    text-align: center;
-}
-
-.rightNav2 {
-    width: 45%;
-    text-align: right;
-
-}
-
-#search {
-    padding: 5px;
-    font-size: 17px;
-    border: 2px solid rgb(52, 162, 177);
-    border-radius: 9px;
 }
 
 .background {
     background: rgb(70, 195, 218) url("/img/branco.png");
     background-blend-mode: darken;
     background-size: cover;
+    
 }
