--- a/css/sobre.css
+++ b/css/sobre.css
@@ -8,17 +8,7 @@ body {
     
 }
 
-.sobre {
-    background-color: #1996c7;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    padding: 100px;
-    border-radius: 15px;
-    color: white;
-    
-}
+
 
 .card{
     width: 50%;
@@ -56,11 +46,6 @@ button:hover {
     cursor: pointer;
 }
 
-.logo {
-    width: 170px;
-    height: 170px;
-}
-
 .pa {
     text-align: center;
     color: white;
@@ -84,6 +69,6 @@ input[type=reset] {
 
 }
 
-img{
-    
+.logo{
+    width: 100%;
 }
