--- a/css/barraNavegacao.css
+++ b/css/barraNavegacao.css
@@ -3,7 +3,7 @@
     /*position: sticky; */
     align-items: center;
     justify-content: center;
-    top: 0px;
+    top: 0x;
     position: relative;
 }
 
