--- a/css/login.css
+++ b/css/login.css
@@ -1,10 +1,9 @@
 body {
     background: rgb(63, 203, 251);
     background: linear-gradient(90deg, rgba(63, 203, 251, 1) 0%, rgba(43, 100, 115, 1) 0%, rgba(0, 121, 255, 1) 100%);
-    min-width: 1080px;
 }
 
-div {
+.tabela {
     background-color: #1996c7;
     position: absolute;
     top: 50%;
@@ -42,12 +41,6 @@ button:hover {
     height: 170px;
 }
 
-.pa {
-    text-align: center;
-    color: white;
-    font-size: 20px;
-}
-
 #login {
     text-align: center;
 }
@@ -63,4 +56,23 @@ input[type=reset] {
     margin: 4px 2px;
     cursor: pointer;
 
+}
+
+.link{
+    list-style: none;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    font-size: 20px;
+    display: flex;
+    /*position: sticky; */
+    align-items: center;
+    justify-content: center;
+    top: 0px;
+    position: relative;
+}
+
+.link:hover{
+    color: greenyellow;
 }
