--- a/css/musica.css
+++ b/css/musica.css
@@ -25,9 +25,16 @@ h3 {
     padding-top: 2%;
 }
 
+
+
 #card {
     background-color: rgb(70, 195, 218);
 
+}
+
+#car:hover {
+    box-shadow: 10%;
+    text-shadow: 80%;
 }
 
 #musica {
